test/bad/functions/variadic04.px

func f(Int... x) def
    return

f(...[2.5])
